update: ajustes menores